@@ -1,3 +1,9 @@
+version <unreleased>
+
+Extractors
++ [njpwworld] Add new extractor (#11561)
+
+
 version 2017.02.24.1
 
 Extractors
